# ElasticSearch_to_MySql

./: .coveragerc  .gitignore  ACHIEVE_100_ERROR_ANALYZER.md  ACHIEVE_100_PERCENT_UTILITY_COVERAGE.md  ADD_JSONL_SUPPORT.md  AI_ERROR_ANALYSIS.md  CHANGELOG.md  CONTRIBUTING.md  COVERAGE_100_ACHIEVEMENT.md  COVERAGE_AUTOMATION_SETUP.md  COVERAGE_IMPROVEMENTS.md  CSV_JSON_ISSUE_FIXED.md  DEPLOYMENT_VERIFICATION.md  EXACT_FIXES_98_TO_100.md  FINAL_100_GUIDE.md  FINAL_100_PERCENT_GUIDE.md  FINAL_1_PERCENT.md  FINAL_1_PERCENT_GUIDE.md  FINAL_FIX.md  FINAL_PUSH_TO_100.md  GET_TO_100_PERCENT.md  GITHUB_SETUP.md  HTTP_HANDLER_FIX.md  JSONL_SOURCE_PATCH.md  LICENSE  LINE_171_FINAL_OPTIONS.md  METRICS.md  MIGRATION_GUIDE.md  MOCKING_FIX_EXPLAINED.md  OPTUM_DEPLOYMENT_VERIFICATION.md  PROJECT_SUMMARY.md  PROMETHEUS_INTEGRATION_COMPLETE.md  QUICK_FIXES.md  QUICK_FIX_BROKEN_TEST.md  QUICK_IMPORT_FIX.md  QUICK_SETUP.md  README.md  README_100_COVERAGE.md  README_WITH_COVERAGE.md  SCHEMA_DRIVEN_ARCHITECTURE.md  (+62 more)
.github/ISSUE_TEMPLATE/: bug_report.md
.github/scripts/: test_config.py  update_mysql_tests.py  update_readme_coverage.py
.github/workflows/: codeql.yml  test-updated.yml  test.yml  tests.yml
examples/: custom_implementations.py  custom_tests_example.py  demo_error_analysis.py  generate_test_data.py
legacy/: daily_run.sh
schemas/: example_scans.json
