[project]
name = "elasticsearch-to-mysql"
version = "1.0.0"
description = "Data pipeline for migrating data from ElasticSearch/JSON to MySQL"
authors = [{name = "Kevin McAllorum", email = "kevin_mcallorum@linux.com"}]
license = {text = "MIT"}
requires-python = ">=3.9"

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests requiring ES/MySQL connections",
    "performance: Throughput and latency benchmarks",
    "agent_research: Schema analysis with AI agents (pytest-agents)",
    "slow: Long-running migration tests",
    "multithreaded: Tests that exercise multi-threaded execution",
]

[tool.coverage.run]
source = ["."]
omit = [
    ".venv/*",
    "test_*.py",
    "conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
